fix: remove border-radius for sidebar on small screens for better responsiveness

--- a/src/components/side-bar/sidebar.module.css
+++ b/src/components/side-bar/sidebar.module.css
@@ -18,6 +18,7 @@
 @media (max-width: 390px) {
 	.sidebar {
 		width: 100vw;
+		border-radius: 0;
 	}
 }
 @keyframes fade-in-right {
